# esp-matter

components/esp_matter/: esp_matter_client.cpp  esp_matter_client.h
components/esp_matter_controller/commands/: esp_matter_controller_cluster_command.cpp  esp_matter_controller_cluster_command.h  esp_matter_controller_write_command.h
components/esp_matter_controller/core/: esp_matter_controller_console.cpp
examples/light/: CMakeLists.txt  sdkconfig.defaults.esp32c61
examples/light/components/esp_bsp_devkit/: .component_hash  Kconfig  idf_component.yml
examples/light/components/esp_bsp_devkit/src/: esp_bsp_devkit.c
examples/light/components/led_indicator/src/: led_strips.c
examples/light/main/: CMakeLists.txt  app_priv.h  idf_component.yml
